@@ -25,6 +25,7 @@ Bugs fixed:
 - 1600707 Fixed segfault with NULL string properties
 - 1601219 Fixed bogus enumeration upcall results
 - 1601274 Fixed legacy __Namespace support
+- 1601174 Fixed interopProvider segfault
 
 Changes in 1.1.1
 ================
